# sleap-vizmo

./: .gitattributes  .gitignore  CLAUDE.md  README.md  demo_sleap_roots_integration.py  organize_tifs.sh  pyproject.toml  run_sleap_roots_processing.py  sleap_roots_processing.ipynb  sleap_viz.py  test_metadata.sh  test_sleap_roots_processing.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.serena/: project.yml
examples/: README.md  check_sleap_roots_setup.py  demo_sleap_roots_integration.py  run_sleap_roots_processing.py
sleap_vizmo/: __init__.py  data_utils.py  json_utils.py  pipeline_utils.py  plotting_utils.py  roots_utils.py  saving_utils.py  sleap_roots_processing.py  utils.py  video_utils.py
src/: __init__.py  data_utils.py  video_utils.py
tests/: conftest.py  test_button_logic.py  test_data_structure_safety.py  test_data_utils.py  test_examples.py  test_json_utils.py  test_pipeline_utils.py  test_plotting_utils.py  test_roots_utils.py  test_saving_utils.py  test_series_loading.py  test_sleap_integration.py  test_sleap_io_structures.py  test_sleap_io_validation.py  test_sleap_roots_import.py  test_sleap_roots_pipelines.py  test_sleap_roots_processing.py  test_video_utils.py
tests/data/: lateral_root_MK22_Day14_labels.v002.slp  lateral_root_MK22_Day14_test_labels.v003.slp  primary_root_MK22_Day14_labels.v003.slp
