[project]
name = "sleap-visualizer"
version = "0.1.0"
description = "Interactive SLEAP file visualizer using Marimo and Plotly"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "marimo>=0.9.0",
    "sleap-io>=0.2.0",
    "plotly>=5.18.0",
    "numpy>=1.21.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "kaleido",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''